wingfoil-next/tests/trybuild/unknown_combinator.stderr
error[E0425]: cannot find value `__WF_OP_FROBNICATE_PASSIVE` in this scope
  --> tests/trybuild/unknown_combinator.rs:12:62
   |
12 |         let out = g.ticker(Duration::from_nanos(10)).count().frobnicate();
   |                                                              ^^^^^^^^^^
   |
  ::: src/ops.rs
   |
   | #[op(build = constant, no_builder)]
   | ----------------------------------- similarly named constant `__WF_OP_CONSTANT_PASSIVE` defined here
   |
help: a constant with a similar name exists
   |
12 -         let out = g.ticker(Duration::from_nanos(10)).count().frobnicate();
12 +         let out = g.ticker(Duration::from_nanos(10)).count().__WF_OP_CONSTANT_PASSIVE();
   |

error[E0425]: cannot find value `__WF_OP_FROBNICATE_ACTIVATION` in this scope
  --> tests/trybuild/unknown_combinator.rs:12:62
   |
12 |         let out = g.ticker(Duration::from_nanos(10)).count().frobnicate();
   |                                                              ^^^^^^^^^^
   |
  ::: src/ops.rs
   |
   | #[op(build = constant, no_builder)]
   | ----------------------------------- similarly named constant `__WF_OP_CONSTANT_ACTIVATION` defined here
   |
help: a constant with a similar name exists
   |
12 -         let out = g.ticker(Duration::from_nanos(10)).count().frobnicate();
12 +         let out = g.ticker(Duration::from_nanos(10)).count().__WF_OP_CONSTANT_ACTIVATION();
   |

error[E0599]: no method named `frobnicate` found for struct `wingfoil_next::fluent::Stream<T>` in the current scope
  --> tests/trybuild/unknown_combinator.rs:12:62
   |
12 |         let out = g.ticker(Duration::from_nanos(10)).count().frobnicate();
   |                                                              ^^^^^^^^^^ method not found in `wingfoil_next::fluent::Stream<u64>`

error[E0425]: cannot find function `__wf_op_frobnicate_cycle` in this scope
  --> tests/trybuild/unknown_combinator.rs:12:62
   |
12 |         let out = g.ticker(Duration::from_nanos(10)).count().frobnicate();
   |                                                              ^^^^^^^^^^
   |
  ::: src/ops.rs
   |
   | #[op(build = constant, no_builder)]
   | ----------------------------------- similarly named function `__wf_op_constant_cycle` defined here
   |
help: a function with a similar name exists
   |
12 -         let out = g.ticker(Duration::from_nanos(10)).count().frobnicate();
12 +         let out = g.ticker(Duration::from_nanos(10)).count().__wf_op_constant_cycle();
   |
